update:fix the client adding
