# idp-server/internal/interfaces/http/dto/client_redirect_uri.go
@@ -1,0 +1,6 @@
+package dto
+
+type RegisterClientRedirectURIRequest struct {
+	RedirectURI  string   `json:"redirect_uri" form:"redirect_uri"`
+	RedirectURIs []string `json:"redirect_uris" form:"redirect_uris"`
+}
