# idp-server/internal/ports/repository/client_repository.go
@@ -8,4 +8,6 @@ import (
 
 type ClientRepository interface {
 	FindByClientID(ctx context.Context, clientID string) (*client.Model, error)
+	CreateClient(ctx context.Context, model *client.Model) error
+	RegisterRedirectURIs(ctx context.Context, clientDBID int64, redirectURIs []string) (int, error)
 }
